@@ -58,9 +58,6 @@ public:
   // reread the kwm configuration files
   void reConfigure();
 
-  // show the modal logout dialog
-  void showLogout();
-  
 protected:
   bool eventFilter( QObject *, QEvent * );
   void  timerEvent( QTimerEvent * );
@@ -87,6 +84,11 @@ void logout();
 bool focus_grabbed();
 void showMinicli();
 void showTask();
+// Like manager->activateClient but also raises the window and sends a
+// sound event. In addition switchActivateClient also takes care about
+// crappy focus policies: It will show a warning message in such a
+// case.  In addition, switchActivateClient takes care that the client
+// window is visible.
 void switchActivateClient(Client*, bool show_warning=false);
 
 #endif /* MAIN_H */
